--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -16,13 +16,14 @@
     - pygpgme
     - yum-utils
 
-- name: Add GitLab Runner rpm repo
-  template:
-    src: runner_gitlab-ci-multi-runner.repo.j2
-    dest: /etc/yum.repos.d/runner_gitlab-ci-multi-runner.repo
+- name: Add GitLab Runner YUM repo
+  yum_repository:
+    name: gitlab-runner
+    description: GitLab Runner
+    baseurl: 'https://packages.gitlab.com/runner/gitlab-runner/el/{{ ansible_distribution_major_version }}/$basearch'
 
 - name: Install GitLab Runner
   yum:
-    name: gitlab-ci-multi-runner
+    name: gitlab-runner
     state: latest
     update_cache: yes
